fix dark mode colour

--- a/assets/css/themes/alberta.css
+++ b/assets/css/themes/alberta.css
@@ -27,6 +27,15 @@
   display: inline-block;
 }
 
+.dark .attachments-block a {
+  background-color: rgb(var(--color-primary-500));
+  color:  rgb(255, 219, 5);
+  padding: 0.2rem 0.4rem;
+  border-radius: 0.2rem;
+  margin-right: 0.25rem;
+  display: inline-block;
+}
+
 .attachments-block a:hover {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
